@@ -43,10 +43,9 @@ class Level4:
         else:
             self.mouse = True
 
-        # Initialize pygame
-        py.init()
+            self.player = Player(arrows)
 
-        self.manager = gui.UIManager((self.SW, self.SH))  # create UI manager
+    def run(self):
 
         # Create a custom event for adding a new enemy/clouds
         self.ADDENEMY = py.USEREVENT + 1
@@ -57,7 +56,6 @@ class Level4:
         # Create groups to hold enemy sprites and all sprites
         # - enemies is used for collision detection and position updates
         # - all_sprites is used for rendering
-        self.player = Player(arrows)
         self.bullets = py.sprite.LayeredDirty()
         self.enemyB = py.sprite.LayeredDirty()
         self.enemies = py.sprite.LayeredDirty()
@@ -68,7 +66,10 @@ class Level4:
         # Instantiate player.
         self.all_sprites.add(self.player)
 
-    def run(self):
+        # Initialize pygame
+        py.init()
+
+        self.manager = gui.UIManager((self.SW, self.SH))  # create UI manager
 
         clock = py.time.Clock()
         manual_start = 0
@@ -101,7 +102,7 @@ class Level4:
 
         while running:
 
-            time_delta = clock.tick(60) / 1000.0
+            self.manager.update(time_delta)
 
             if self.mouse:  # if user is moving with mouse
                 py.mouse.set_pos(960, 540)  # always center mouse
@@ -263,10 +264,10 @@ class Level4:
                        self.player.damage,
                        int(self.player.damage / (0.6 - (sBooster / 1000))), self.player.bspeed + 5)
 
-            self.manager.update(time_delta)
             self.manager.draw_ui(self.screen)
 
             py.display.update()
+            time_delta = clock.tick(60)
 
         if not exit:
            running = True
@@ -279,7 +280,7 @@ class Level4:
 
         while running:
 
-            time_delta = clock.tick(60) / 1000.0
+            self.manager.update(time_delta)
 
             if self.mouse:  # if user is moving with mouse
                 py.mouse.set_pos(960, 540)  # always center mouse
@@ -445,10 +446,10 @@ class Level4:
             hud.update(2,3,score,100,self.player.health,self.player.maxHealth,self.player.lives,self.player.damage,
                        int(self.player.damage / (0.6 - (sBooster / 1000))),self.player.bspeed + 5)
 
-            self.manager.update(time_delta)
             self.manager.draw_ui(self.screen)
 
             py.display.update()
+            time_delta = clock.tick(60)
 
         if not exit:
             running = True
@@ -461,7 +462,7 @@ class Level4:
 
         while running:
 
-            time_delta = clock.tick(60) / 1000.0
+            self.manager.update(time_delta)
 
             if self.mouse:  # if user is moving with mouse
                 py.mouse.set_pos(960, 540)  # always center mouse
@@ -628,10 +629,10 @@ class Level4:
                        self.player.damage,
                        int(self.player.damage / (0.6 - (sBooster / 1000))), self.player.bspeed + 5)
 
-            self.manager.update(time_delta)
             self.manager.draw_ui(self.screen)
 
             py.display.update()
+            time_delta = clock.tick(60)
 
         # All done! Stop and quit the mixer
         #py.mixer.music.stop()
