@@ -45,4 +45,5 @@
      * got enemy shooting mechanics
      * got 4 levels now
      * fixed where buffs were spawning too high
+     * fixed a enemy spawn issue
 
